--- a/etof/CMakeLists.txt
+++ b/etof/CMakeLists.txt
@@ -13,11 +13,9 @@ set(INCLUDE_DIRECTORIES
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -41,6 +39,6 @@ MpdEtofMatching.cxx
 Set(HEADERS)
 Set(LINKDEF MpdEtofLinkDef.h)
 Set(LIBRARY_NAME Etof)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
