--- a/kalman/CMakeLists.txt
+++ b/kalman/CMakeLists.txt
@@ -14,7 +14,6 @@ Set(SYSTEM_INCLUDE_DIRECTORIES
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -35,6 +34,6 @@ set(SRCS
 Set(HEADERS)
 Set(LINKDEF KalmanLinkDef.h)
 Set(LIBRARY_NAME Kalman)
-Set(DEPENDENCIES Core Base MpdField MpdBase)
+Set(DEPENDENCIES MpdField)
 
 GENERATE_LIBRARY()
