--- a/mpddst/MpdMiniEvent/CMakeLists.txt
+++ b/mpddst/MpdMiniEvent/CMakeLists.txt
@@ -5,13 +5,9 @@ ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${GSL_INCLUDE_DIRS}
- ${CLHEP_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -41,6 +37,6 @@ MpdMiniFHCalHit.cxx
 Set(HEADERS)
 Set(LINKDEF MpdMiniEventLinkDef.h)
 Set(LIBRARY_NAME MpdMiniEvent)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES Base)
 
 GENERATE_LIBRARY()
