--- a/mpddst/mcDst/CMakeLists.txt
+++ b/mpddst/mcDst/CMakeLists.txt
@@ -5,13 +5,9 @@ ${CMAKE_SOURCE_DIR}/mpddst/mcDst
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${GSL_INCLUDE_DIRS}
- ${CLHEP_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -34,6 +30,6 @@ MpdMcArrays.cxx
 Set(HEADERS)
 Set(LINKDEF MpdMcDstLinkDef.h)
 Set(LIBRARY_NAME MpdMcDst)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
