--- a/mpdpid/CMakeLists.txt
+++ b/mpdpid/CMakeLists.txt
@@ -5,12 +5,6 @@
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
  ${CMAKE_SOURCE_DIR}/mpdbase
-# ${CMAKE_SOURCE_DIR}/kalman
-# ${CMAKE_SOURCE_DIR}/lhetrack
-# ${CMAKE_SOURCE_DIR}/tof
-# ${CMAKE_SOURCE_DIR}/tpc
-# ${CMAKE_SOURCE_DIR}/etof
-# ${CMAKE_SOURCE_DIR}/mpdfield
  ${CMAKE_SOURCE_DIR}/mpdpid
 )
 
@@ -19,7 +13,6 @@ Set(SYSTEM_INCLUDE_DIRECTORIES
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -42,6 +35,6 @@ MpdPidQA.h
 )
 Set(LINKDEF MpdPidLinkDef.h)
 Set(LIBRARY_NAME MpdPid)
-Set(DEPENDENCIES Core Base Hist MpdBase)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
