--- a/clustering/CMakeLists.txt
+++ b/clustering/CMakeLists.txt
@@ -17,7 +17,7 @@ Set(SYSTEM_INCLUDE_DIRECTORIES
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
+include_directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -37,6 +37,6 @@ ClManager.cxx
 Set(HEADERS)
 Set(LINKDEF ClusterLinkDef.h)
 Set(LIBRARY_NAME Cluster)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
