--- a/ffd/CMakeLists.txt
+++ b/ffd/CMakeLists.txt
@@ -10,11 +10,9 @@ set(INCLUDE_DIRECTORIES
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -37,6 +35,6 @@ MpdFfdPoint.cxx
 Set(HEADERS)
 Set(LINKDEF MpdFfdLinkDef.h)
 Set(LIBRARY_NAME Ffd)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
