--- a/mpdbase/CMakeLists.txt
+++ b/mpdbase/CMakeLists.txt
@@ -8,11 +8,9 @@ set(INCLUDE_DIRECTORIES
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${CLHEP_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -36,11 +34,9 @@ if(RULE_CHECKER_FOUND)
   CHECK_RULES("${SRCS}" "${INCLUDE_DIRECTORIES}" MPDBASE_RULES)
 endif(RULE_CHECKER_FOUND)
 
-SET_SOURCE_FILES_PROPERTIES(${SRCS} PROPERTIES COMPILE_FLAGS "-O3 ")
-
 Set(HEADERS)
 Set(LINKDEF MpdBaseLinkDef.h)
 Set(LIBRARY_NAME MpdBase)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES )
 
 GENERATE_LIBRARY()
