--- a/mpdfield/CMakeLists.txt
+++ b/mpdfield/CMakeLists.txt
@@ -12,7 +12,6 @@ Set(SYSTEM_INCLUDE_DIRECTORIES
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -40,6 +39,6 @@ MpdFieldMapSym3.cxx
 Set(HEADERS)
 Set(LINKDEF FieldLinkDef.h)
 Set(LIBRARY_NAME MpdField)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
