--- a/passive/CMakeLists.txt
+++ b/passive/CMakeLists.txt
@@ -14,8 +14,7 @@ Set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/passive
 )
 
-Include_Directories( ${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
+Include_Directories(${INCLUDE_DIRECTORIES})
 
 Set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -42,6 +41,6 @@ Set(SRCS
 Set(HEADERS )
 Set(LINKDEF PassiveLinkDef.h)
 Set(LIBRARY_NAME Passive)
-Set(DEPENDENCIES Base GeoBase ParBase Geom Core)
+Set(DEPENDENCIES )
 
 GENERATE_LIBRARY()
