--- a/physics/femto/MpdFemtoMaker/CMakeLists.txt
+++ b/physics/femto/MpdFemtoMaker/CMakeLists.txt
@@ -2,26 +2,14 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mcstack
- ${CMAKE_SOURCE_DIR}/passive
- ${CMAKE_SOURCE_DIR}/mpdbase
- ${CMAKE_SOURCE_DIR}/mpddst
- ${CMAKE_SOURCE_DIR}/mpdfield
- ${CMAKE_SOURCE_DIR}/tpc
- ${CMAKE_SOURCE_DIR}/lhetrack
- ${CMAKE_SOURCE_DIR}/kalman
- ${CMAKE_SOURCE_DIR}/physics/femto/MpdFemtoMaker
+  ${CMAKE_SOURCE_DIR}/physics/femto/MpdFemtoMaker
  )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${GSL_INCLUDE_DIRS}
- ${CLHEP_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -65,6 +53,6 @@ MpdFemtoV0.cxx
 Set(HEADERS)
 Set(LINKDEF BaseLinkDef.h)
 Set(LIBRARY_NAME MpdFemtoMaker)
-Set(DEPENDENCIES Core Base MpdBase MpdFsiTools)
+Set(DEPENDENCIES Base)
 
 GENERATE_LIBRARY()
