--- a/physics/femto/fsiTools/CMakeLists.txt
+++ b/physics/femto/fsiTools/CMakeLists.txt
@@ -1,17 +1,12 @@
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/physics/femto/fsiTools 
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${GSL_INCLUDE_DIRS}
- ${CLHEP_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -26,8 +21,7 @@ MpdFemtoFsiTools.F
 )
 
 Set(HEADERS)
-#Set(LINKDEF LinkDef.h)
 Set(LIBRARY_NAME MpdFsiTools)
-Set(DEPENDENCIES gfortran)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
