--- a/sts/CMakeLists.txt
+++ b/sts/CMakeLists.txt
@@ -10,11 +10,9 @@ set(INCLUDE_DIRECTORIES
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -43,6 +41,6 @@ MpdItsHit5spd.cxx
 Set(HEADERS)
 Set(LINKDEF MpdStsLinkDef.h)
 Set(LIBRARY_NAME Sts)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
