--- a/tof/CMakeLists.txt
+++ b/tof/CMakeLists.txt
@@ -4,20 +4,16 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mcstack
- ${CMAKE_SOURCE_DIR}/tof
- ${CMAKE_SOURCE_DIR}/kalman
- ${CMAKE_SOURCE_DIR}/lhetrack
- ${CMAKE_SOURCE_DIR}/etof
+  ${CMAKE_SOURCE_DIR}/mcstack
+  ${CMAKE_SOURCE_DIR}/tof
+  ${CMAKE_SOURCE_DIR}/kalman
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -67,6 +63,6 @@ MpdTOFpid.h
 Set(LINKDEF TofLinkDef.h)
 
 Set(LIBRARY_NAME Tof)
-Set(DEPENDENCIES Core Base Kalman)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
