--- a/zdc/CMakeLists.txt
+++ b/zdc/CMakeLists.txt
@@ -5,17 +5,14 @@
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
  ${CMAKE_SOURCE_DIR}/mcstack 
- ${CMAKE_SOURCE_DIR}/tpc
  ${CMAKE_SOURCE_DIR}/zdc
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
- ${Boost_INCLUDE_DIRS}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
@@ -56,6 +53,6 @@ MpdZdcPsdDigiPar.h
 
 Set(LINKDEF MpdZdcLinkDef.h)
 Set(LIBRARY_NAME Zdc)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
