Added missing linking of library Hist.

--- a/mpdpid/CMakeLists.txt
+++ b/mpdpid/CMakeLists.txt
@@ -35,6 +35,6 @@ MpdPidQA.h
 )
 Set(LINKDEF MpdPidLinkDef.h)
 Set(LIBRARY_NAME MpdPid)
-Set(DEPENDENCIES)
+Set(DEPENDENCIES Hist)
 
 GENERATE_LIBRARY()
