--- a/physics/pwg3/femtoscopy/nicafemto/nica_helpers/CMakeLists.txt
+++ b/physics/pwg3/femtoscopy/nicafemto/nica_helpers/CMakeLists.txt
@@ -58,7 +58,7 @@ NicaTpcSectorGeo.cxx
 Set(HEADERS )
 Set(LINKDEF NicaMpdHelpersLinkDef.h)
 Set(LIBRARY_NAME NicaMpdHelper)
-Set(DEPENDENCIES NicaFeatures NicaDataFormat MpdDst tpc Base NicaCut NicaAna)
+Set(DEPENDENCIES  MpdDst tpc Base NicaAna)
 
 GENERATE_LIBRARY()
 
