--- a/physics/pwg3/femtoscopy/nicafemto/tasks/CMakeLists.txt
+++ b/physics/pwg3/femtoscopy/nicafemto/tasks/CMakeLists.txt
@@ -59,7 +59,7 @@ NicaMpdV0Matcher.cxx
 Set(HEADERS )
 Set(LINKDEF NicaMpdTasksLinkDef.h)
 Set(LIBRARY_NAME NicaMpdTasks)
-Set(DEPENDENCIES NicaFeatures NicaDataFormat MpdDst tpc Base NicaCut NicaAna NicaMpdFormat)
+Set(DEPENDENCIES  MpdDst tpc Base NicaMpdFormat)
 
 GENERATE_LIBRARY()
 
