Adaptation to radiation tests.

--- a/generators/CMakeLists.txt
+++ b/generators/CMakeLists.txt
@@ -66,6 +66,7 @@ MpdTPythia8Generator.cxx
 MpdSmashGenerator.cxx
 MpdDecayerPyt8.cxx
 MpdUnigenGenerator.cxx
+MpdCosmicRayGenerator.cxx
 )
 #if(PLUTO_FOUND)
 #set(SRCS ${SRCS} FairPlutoReactionGenerator.cxx MpdPlutoGenerator.cxx)
