--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -211,7 +211,7 @@ build_nica:c8:
   script:
     - module add mpddev/latest
     - export MPDROOT=$(readlink -m $OS_TYPE/mpdroot)
-    - source $MPDROOT/etc/env.sh
+    - source $MPDROOT/config/env.sh
     - $CI_PROJECT_DIR/scripts/run_build_tests.sh -r $REPORT_NAME
     - (if grep -q "failure" $REPORT_NAME.xml; then $(exit -1); else $(exit 0); fi);
   tags:
