Moved bmd to subdirectory detectors

--- a/detectors/bmd/CMakeLists.txt
+++ b/detectors/bmd/CMakeLists.txt
@@ -4,8 +4,8 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/mcstack
-  ${CMAKE_SOURCE_DIR}/bmd
+ ${CMAKE_SOURCE_DIR}/mcstack
+ ${CMAKE_CURRENT_LIST_DIR}
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
